unpackaged/main/default/objects/Order/fields/Finance_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Reviewed_Date__c</fullName>
    <label>Finance Reviewed Date</label>
    <type>Date</type>
</CustomField>