unpackaged/main/default/objects/Order/fields/MSA_Minimum_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Minimum_Term_End_Date__c</fullName>
    <formula>Opportunity.MSA_Contract__r.MSA_Minimum_Term_End_Date__c</formula>
    <label>MSA Minimum Term End Date</label>
    <type>Date</type>
</CustomField>