unpackaged/main/default/objects/Order/fields/MSA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Start_Date__c</fullName>
    <formula>Opportunity.MSA_Contract__r.MSA_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSA Start Date</label>
    <type>Date</type>
</CustomField>