unpackaged/main/default/objects/Order/fields/MSA_Term_years__c.field-meta.xml
<CustomField>
    <fullName>MSA_Term_years__c</fullName>
    <formula>Opportunity.MSA_Contract__r.MSA_Term_years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSA Term (years)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>