unpackaged/main/default/objects/Order/fields/Netsuite_Failure_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Failure_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Netsuite Failure Indicator</label>
    <type>Checkbox</type>
</CustomField>