unpackaged/main/default/objects/Order/fields/NetSuite_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Id__c</fullName>
    <description>Created for Integration Team</description>
    <label>NetSuite Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>