unpackaged/main/default/objects/Order/fields/New_Subscription_Flag__c.field-meta.xml
<CustomField>
    <fullName>New_Subscription_Flag__c</fullName>
    <formula>IF( SBQQ__Quote__r.SBQQ__StartDate__c &gt;   Account.Uses_MSA_of__r.MSA_Minimum_Term_End_Date__c  , True, False)</formula>
    <label>New Subscription Flag</label>
    <type>Checkbox</type>
</CustomField>