unpackaged/main/default/objects/Order/fields/NS_Subscription_MSA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Subscription_MSA_End_Date__c</fullName>
    <formula>IF((EffectiveDate &lt; MSA_Minimum_Term_End_Date__c),MSA_Minimum_Term_End_Date__c,EndDate)</formula>
    <label>NS Subscription MSA End Date</label>
    <type>Date</type>
</CustomField>