unpackaged/main/default/objects/Order/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>PO Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>